# x_air_sdk

./: .gitignore
.claude/: settings.local.json
docs/: pico_map.txt
docs/用户使用文档/: 01_xarm_can_SDK使用文档.md  02_xarm_ros2使用文档.md  03_xarm_teleop使用文档.md  Untitled Document 1
publish/lerobot_collector/: can_latency_test.py  can_latency_test_serial.py  visualize_episode.py  xarm_deploy_direct.py  xarm_deploy_direct_origin.py  xarm_deploy_direct_single.py  xarm_ros2_record (copy).py  xarm_ros2_record.py  xarm_ros2_record_another.py  xarm_ros2_record_v2.py  xarm_trajectory_executor.py
publish/lerobot_collector/lib/: xarm_can.py
publish/modules/src/ROS-TCP-Endpoint-main-ros2/: README_CN.md
publish/modules/src/ROS-TCP-Endpoint-main-ros2/ros_tcp_endpoint/: default_server_endpoint.py
publish/modules/src/io_teleop_bridge/: README.md  package.xml  setup.cfg  setup.py
publish/modules/src/io_teleop_bridge/io_teleop_bridge/: bridge_node.py
publish/modules/src/io_teleop_bridge/launch/: io_teleop_bridge.launch.py
publish/modules/src/multi_realsense/: .gitignore  CMakeLists.txt  LICENSE  README.md  nomachine.deb  package.xml
publish/modules/src/multi_realsense/config/: cam_chest.yaml
publish/modules/src/multi_realsense/launch/: depth_to_pointcloud.launch.py  multi_cameras.launch.py  single_camera.launch.py
publish/modules/src/multi_realsense/scripts/: check_cameras.py
publish/modules/src/teleop_pad_bridge/: package.xml  setup.cfg  setup.py
publish/modules/src/teleop_pad_bridge/teleop_pad_bridge/: teleop_bridge_node.py
publish/modules/src/xarm_description/: .gitignore  CMakeLists.txt  package.xml
publish/modules/src/xarm_description/.github/: dependabot.yml
publish/modules/src/xarm_description/.github/workflows/: release.yaml  test.yaml
publish/modules/src/xarm_description/config/arm/v10/: inertials.yaml
publish/modules/src/xarm_description/launch/: display_xarm.launch.py
publish/modules/src/xarm_description/rviz/: arm_only.rviz  bimanual.rviz
publish/modules/src/xarm_description/urdf/arm/: xarm_arm.xacro  xarm_macro.xacro
publish/modules/src/xarm_description/urdf/body/: xarm_body.xacro  xarm_body_macro.xacro
publish/modules/src/xarm_description/urdf/ee/: ee_with_one_link.xacro  xarm_hand.xacro  xarm_hand_arguments.xacro  xarm_hand_macro.xacro
publish/modules/src/xarm_description/urdf/robot/: v10.urdf.xacro  xarm_robot.xacro
publish/modules/src/xarm_description/urdf/ros2_control/: xarm.bimanual.ros2_control.xacro  xarm.ros2_control.xacro
publish/modules/src/xarm_ros2/: README.md  start_xarm_ros2.sh
publish/modules/src/xarm_ros2/.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
publish/modules/src/xarm_ros2/.github/workflows/: release.yaml
publish/modules/src/xarm_ros2/xarm/: CMakeLists.txt  package.xml
publish/modules/src/xarm_ros2/xarm_bimanual_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
publish/modules/src/xarm_ros2/xarm_bimanual_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  xarm_bimanual.srdf  xarm_bimanual.urdf.xacro
publish/modules/src/xarm_ros2/xarm_bimanual_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
publish/modules/src/xarm_ros2/xarm_bringup/: CMakeLists.txt  README.md  package.xml
publish/modules/src/xarm_ros2/xarm_bringup/config/v10_controllers/: xarm_v10_bimanual_controllers.yaml  xarm_v10_bimanual_controllers_namespaced.yaml  xarm_v10_controllers.yaml
publish/modules/src/xarm_ros2/xarm_bringup/launch/: xarm.bimanual.launch.py  xarm.launch.py
publish/modules/src/xarm_ros2/xarm_bringup/rviz/: bimanual.rviz
publish/modules/src/xarm_ros2/xarm_hardware/: CMakeLists.txt  package.xml  xarm_hardware.xml
publish/modules/src/xarm_ros2/xarm_hardware/include/xarm_hardware/: v10_simple_hardware.hpp  visibility_control.h
publish/modules/src/xarm_ros2/xarm_hardware/src/: v10_simple_hardware.cpp
publish/modules/src/xarm_teleop/: .gitignore  CMakeLists.txt  custom_start_teleop.sh  package.xml  start_xarm_teleop.sh  start_xarm_teleop_both.sh
publish/modules/src/xarm_teleop/config/: follower.yaml  leader.yaml
publish/modules/src/xarm_teleop/control/: gripper_bridge.cpp  xarm_uilateral_control_ros2.cpp  xarm_unilateral_control.cpp
publish/modules/src/xarm_teleop/include/: new_home_controller.h  xarm_teleop_sdk.h
publish/modules/src/xarm_teleop/launch/: pico_bridge.launch.py  teleop.launch.py
publish/modules/src/xarm_teleop/script/: launch_unilateral.sh  launch_unilateral_ros2.sh
publish/modules/src/xarm_teleop/src/: xarm_teleop_sdk_impl.cpp
publish/xarm_can/package/examples/: sdk_cpp_basic_test.cpp  sdk_python_basic_test.py
publish/xarm_can/package/include/: xarm_can_sdk.h  xarm_sdk_export.h
publish/xarm_can/package/libexec/: change_baudrate.py  configure_socketcan.sh  configure_socketcan_4_arms.sh  set_zero.sh  setup_can_interfaces.sh  zero_position_calibration.py
