<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>io_teleop_bridge</name>
  <version>1.0.0</version>
  <description>
    Bridge /io_teleop/joint_cmd (JointState) to xArm ROS2 controllers.
    将 TeleXperience 遥操话题桥接到 x_air_sdk 的 forward_position_controller
    或 joint_trajectory_controller。
  </description>
  <maintainer email="user@example.com">vlai</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
